// Fix progress bar in installer on IE & Chrome
git-svn-id: http://dev.prestashop.com/svn/v1/branches/1.5.x@12989 b9a71923-0436-4b27-9f14-aed3839534dd

--- a/install-dev/theme/view.css
+++ b/install-dev/theme/view.css
@@ -709,9 +709,8 @@ ul#optional_update {list-style-type:none;}
     #progress_bar .total span{
         font-size: 16px;
         font-weight: bold;
-        margin-top: 5px;
-        position: absolute;
-        text-align: center;
+        margin-top: -24px;
+        display: block;
     }
 
         #progress_bar .total .progress {
